--- a/composer.json
+++ b/composer.json
@@ -13,6 +13,7 @@
         "laravel/framework": "^6.0",
         "laravel/tinker": "^1.0",
         "mailjet/mailjet-apiv3-php": "^1.4",
+        "sendgrid/sendgrid": "~7",
         "swiftmailer/swiftmailer": "^6.0"
     },
     "require-dev": {
