--- a/.env.example
+++ b/.env.example
@@ -29,6 +29,8 @@ MAIL_PORT=2525
 MAIL_USERNAME=null
 MAIL_PASSWORD=null
 MAIL_ENCRYPTION=null
+MAIL_FROM_ADDRESS= your company e-mail
+MAIL_FROM_NAME= your company name
 
 AWS_ACCESS_KEY_ID=
 AWS_SECRET_ACCESS_KEY=
@@ -42,3 +44,8 @@ PUSHER_APP_CLUSTER=mt1
 
 MIX_PUSHER_APP_KEY="${PUSHER_APP_KEY}"
 MIX_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
+
+SENDGRID_API_KEY= enter your api-key
+MAILJET_KEY= your key
+MAILJET_SECRET= and secret
+TEST_EMAIL= your e-mailaddress
